changed trasnport tag

--- a/source/forms/directions.html
+++ b/source/forms/directions.html
@@ -86,12 +86,21 @@
             </fieldset>
             <fieldset class="dataset">
               <legend class="dataset__legend">Транспорт</legend>
-              <p class="dataset__toggles">
-                <button class="dataset__toggle dataset__toggle--active" type="button">Самолет</button>
-                <button class="dataset__toggle dataset__toggle--active" type="button">Общественный траспорт</button>
-                <button class="dataset__toggle" type="button">Велосипед</button>
-                <button class="dataset__toggle dataset__toggle--active" type="button">Прогулки</button>
-              </p>
+              <ul class="dataset transport-list">
+                <li class="transport-list__item">
+                  <button class="transport-list__item transport-list__item--active" type="button">Самолет</button>
+                </li>
+                <li class="transport-list__item">
+                  <button class="transport-list__item transport-list__item--active" type="button">Общественный
+                    траспорт</button>
+                </li>
+                <li class="transport-list__item">
+                  <button class="transport-list__item" type="button">Велосипед</button>
+                </li>
+                <li class="transport-list__item">
+                  <button class="transport-list__item transport-list__item--active" type="button">Прогулки</button>
+                </li>
+              </ul>
             </fieldset>
         </section>
         <section class="user-plans">
