--- a/source/forms/directions.html
+++ b/source/forms/directions.html
@@ -14,7 +14,7 @@
       <img src="img/logo.svg" width="226" height="30" alt="Логотип" />
     </a>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
+      <button class="main-nav__toggle button button--togle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="container">
@@ -79,7 +79,7 @@
               level
             </div>
             <img class="general-info__avatar" src="../img/deminphoto.svg" alt="Фотография Демина" />
-            <button class="general-info__change-photo">СМЕНИТЬ ФОТО</button>
+            <button class="general-info__change-photo button button--light-theme">СМЕНИТЬ ФОТО</button>
             <fieldset class="dataset">
               <legend class="dataset__legend">ТЭГИ</legend>
               <textarea class="dataset__change">#бургер #бар #футбол #концерт #крафт</textarea>
@@ -88,17 +88,19 @@
               <legend class="dataset__legend">Транспорт</legend>
               <ul class="dataset transport-list">
                 <li class="transport-list__item">
-                  <button class="transport-list__item transport-list__item--active" type="button">Самолет</button>
+                  <button class="transport-list__item button button--togle button--active"
+                    type="button">Самолет</button>
                 </li>
                 <li class="transport-list__item">
-                  <button class="transport-list__item transport-list__item--active" type="button">Общественный
+                  <button class="transport-list__item button button--togle button--active" type="button">Общественный
                     траспорт</button>
                 </li>
                 <li class="transport-list__item">
                   <button class="transport-list__item" type="button">Велосипед</button>
                 </li>
                 <li class="transport-list__item">
-                  <button class="transport-list__item transport-list__item--active" type="button">Прогулки</button>
+                  <button class="transport-list__item button button--togle button--active"
+                    type="button">Прогулки</button>
                 </li>
               </ul>
             </fieldset>
@@ -107,7 +109,7 @@
           <h2 class="visually-hidden">Планы пользователя</h2>
           <ol class="card-list plan-list">
             <li class="plan-list__item">
-              <ul class="plan-list country">
+              <ul class="plan-list country-list">
                 <li class="country__item">
                   Франция
                 </li>
@@ -129,10 +131,10 @@
                   <dd class="info-list__dates-details">- 29 МАР</dd>
                 </div>
               </dl>
-              <a class="plan-list button button_change">ИЗМЕНИТЬ</a>
+              <a class="plan-list button button--change">ИЗМЕНИТЬ</a>
             </li>
             <li class="plan-list__item">
-              <ul class="plan-list country">
+              <ul class="plan-list country-list">
                 <li class="country__item">
                   Тайланд
                 </li>
@@ -154,7 +156,141 @@
                   <dd class="info-list__dates-details">- 15 ИЮЛ</dd>
                 </div>
               </dl>
-              <a class="plan-list button button_change">ИЗМЕНИТЬ</a>
+              <a class="plan-list button button--change">ИЗМЕНИТЬ</a>
+            </li>
+          </ol>
+        </section>
+        <section class="add-plans">
+          <h2 class="add-plans__caption">Добавить план</h2>
+          <p class="add-plans__toggles slider__toggles">
+            <button class="slider__toggle button button--slider-button button--current" type="button">1</button>
+            <button class="slider__toggle button button--slider-button" type="button">2</button>
+            <button class="slider__toggle button button--slider-button" type="button">3</button>
+          </p>
+          <ol class="add-plans_adding-list step-list">
+            <li class="step-list__item">
+              <h3 class="step-list__caption">Даты пребывания</h3>
+              <p class="step-list__description">Укажите предпочтительное количество попутчиков, которых вы хотели бы
+                позвать в поездку, и ее предполагаемую длительность.</p>
+              <div class="add-plans number">
+                <label for="companions" class="number text">
+                  <b>Ищу попутчиков:</b>
+                </label>
+                <span class="number text text--disabled">
+                  ЧЕЛ.
+                </span>
+                <input id="companions" type="number" />
+              </div>
+              <div class="add-plans number">
+                <label for="days" class="number text">
+                  <b>Длительность:</b>
+                </label>
+                <span class="number text text--disabled">
+                  ДН.
+                </span>
+                <input id="days" type="number" />
+              </div>
+              <div class="add-plans boolean">
+                <label for="children">Можно с детьми</label>
+                <input id="children" type="checkbox" />
+              </div>
+              <input type="month" class="add-planse date-month" datetime="2019-03" />
+              <input type="date" class="add-planse date-days" datetime="2019-03-26" />
+              <button type="button" class="add-plans__next-step button button--middle-theme">Следующий шаг</button>
+            </li>
+            <li class="step-list__item">
+              <h3 class="step-list__caption">Маршрут</h3>
+              <p class="step-list__description">
+                Укажите страны, которые вы хотели бы посетить. Это может быть одна или сразу несколько.
+              </p>
+              <ul class="step-list__sub-list country-input-list">
+                <li class="country-input-list__item">
+                  <select class="country-input-list select">
+                    <option class="select__item">ВЫБЕРИТЕ СТРАНУ</option>
+                    <option class="select__item">Австралия</option>
+                    <option class="select__item">Австрия</option>
+                    <option class="select__item">Айзербайджан</option>
+                    <option class="select__item">Албания</option>
+                    <option class="select__item">Алжир</option>
+                    <option class="select__item">Ангола</option>
+                    <option class="select__item">Андора</option>
+                    <option class="select__item">Антигуа и Барбуда</option>
+                    <option class="select__item">Аргентина</option>
+                    <option class="select__item">Армения</option>
+                    <option class="select__item" selected>Босния и Герцеговина</option>
+                  </select>
+                  <p class="country-input-list__dot-image country-input-list__dot-image--active">.</p>
+                  <img src="../img/bosniaherzegovinaflag.svg" class="country-input-list__flag" alt="Флаг страны" />
+                  <sup class="country-input-list__remove-country">x</sup>
+                </li>
+                <li class="country-input-list__item">
+                  <select class="country-input-list select">
+                    <option class="select__item">ВЫБЕРИТЕ СТРАНУ</option>
+                    <option class="select__item">Австралия</option>
+                    <option class="select__item">Австрия</option>
+                    <option class="select__item">Айзербайджан</option>
+                    <option class="select__item">Албания</option>
+                    <option class="select__item">Алжир</option>
+                    <option class="select__item">Ангола</option>
+                    <option class="select__item">Андора</option>
+                    <option class="select__item">Антигуа и Барбуда</option>
+                    <option class="select__item">Аргентина</option>
+                    <option class="select__item">Армения</option>
+                    <option class="select__item">Афганистан</option>
+                    <option class="select__item">Босния и Герцеговина</option>
+                    <option class="select__item" selected>Чехия</option>
+                  </select>
+                  <p class="country-input-list__dot-image country-input-list__dot-image--active">.</p>
+                  <img src="../img/czechflag.svg" class="country-input-list__flag" alt="Флаг страны" />
+                </li>
+                <li class="country-input-list__item">
+                  <select class="country-input-list select">
+                    <option class="select__item" selected>ВЫБЕРИТЕ СТРАНУ</option>
+                    <option class="select__item">Австралия</option>
+                    <option class="select__item">Австрия</option>
+                    <option class="select__item">Айзербайджан</option>
+                    <option class="select__item">Албания</option>
+                    <option class="select__item">Алжир</option>
+                    <option class="select__item">Ангола</option>
+                    <option class="select__item">Андора</option>
+                    <option class="select__item">Антигуа и Барбуда</option>
+                    <option class="select__item">Аргентина</option>
+                    <option class="select__item">Армения</option>
+                    <option class="select__item">Афганистан</option>
+                    <option class="select__item">Босния и Герцеговина</option>
+                    <option class="select__item">Чехия</option>
+                  </select>
+                  <p class="country-input-list__dot-image country-input-list__dot-image--active">.</p>
+                  <img src="../img/plus.svg" class="country-input-list__flag" alt="Добавить новую страну" />
+                </li>
+              </ul>
+              <button type="button" class="add-plans__next-step button button--middle-theme">Следующий шаг</button>
+              <button type="button" class="add-plans__next-step button button--transparent-theme">На шаг назад</button>
+            </li>
+            <li class="step-list__item">
+              <h3 class="step-list__caption">Развлечения</h3>
+              <p class="step-list__description">
+                Наконец, расскажите о своих планах времяпровождения. Можно писать в свободной форме и ставить тэги.
+              </p>
+              <ul class="step-list country-description-list">
+                <li class="country-description-list__item">
+                  <h4 class="country-description-list__caption">
+                    Босния и Герцеговина
+                  </h4>
+                  <img src="../img/bosniaherzegovinaflag.svg" class="country-input-list__flag" alt="Флаг страны" />
+                  <textarea class="country-description-list__change-text" placeholder="План действий"></textarea>
+                </li>
+                <li class="country-description-list__item">
+                  <h4 class="country-description-list__caption">
+                    Чехия
+                  </h4>
+                  <img src="../img/czechflag.svg" class="country-input-list__flag" alt="Флаг страны" />
+                  <textarea class="country-description-list__change-text"
+                    placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
+                </li>
+              </ul>
+              <button type="button" class="add-plans__next-step button button--middle-theme">Отправить</button>
+              <button type="button" class="add-plans__next-step button button--transparent-theme">На шаг назад</button>
             </li>
           </ol>
         </section>
