--- a/source/pages/directions.html
+++ b/source/pages/directions.html
@@ -9,32 +9,35 @@
 
 <body class="page__body">
   <header class="page-header">
-    <span class="page-header__text-logo">Погнали?</span>
-    <a class="page-header__logo visually-hidden">
-      <img src="img/logo.svg" width="226" height="30" alt="Логотип" />
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle button button--togle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <div class="container">
+    <div class="container">
+      <span class="page-header__text-logo">Погнали?</span>
+      <a class="page-header__logo visually-hidden">
+        <img src="img/logo.svg" width="226" height="30" alt="Логотип" />
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle button button--togle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="about.html">О СЕРВИСЕ</a>
+            <a class="site-list__link" href="../pages/directions.html">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
+            <a class="site-list__link" href="#">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="companions.html">Попутчики</a>
+            <a class="site-list__link" href="../pages/companions.html">Попутчики</a>
           </li>
         </ul>
-        <div class="main-nav__list user-list">
-          <a class="user-list__authorization button" href="authorization.html">
-            <span class="user-list__caption">АВТОРИЗАЦИЯ</span>
-          </a>
-        </div>
-        <dl class="main-nav__list icon-list">
+      </nav>
+      <div class="page-header__list user-list">
+        <a class="user-list__authorization button" href="authorization.html">
+          <span class="user-list__caption">АВТОРИЗАЦИЯ</span>
+        </a>
+      </div>
+      <div class="page-header__list  contact-list">
+        <dl class="page-header__list icon-list">
           <div class="icon-list__item">
             <dt class="icon-list__phone">
               <span class="icon-list__link icon icon--dark-theme icon--home-phone">Позвоните нам</span>
@@ -48,7 +51,7 @@
             <dd class="icon-list__details">MAIL@HTMLACADEMY.RU</dd>
           </div>
         </dl>
-        <ul class="main-nav__list social-list">
+        <ul class="page-header__list social-list">
           <li class="social-list__item">
             <a class="social-list__link icon icon--light-theme icon--facebook"
               href="https://www.facebook.com/htmlacademy">Мы в
@@ -65,8 +68,8 @@
           </li>
         </ul>
       </div>
-    </nav>
-    <span class="page-header__caption">Направления</span>
+      <span class="page-header__caption">Направления</span>
+    </div>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Информация о направлениях пользователя</h1>
