--- a/source/pages/directions.html
+++ b/source/pages/directions.html
@@ -21,7 +21,7 @@
 
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="../pages/directions.html">О СЕРВИСЕ</a>
+            <a class="site-list__link" href="../pages/about.html">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">НАПРАВЛЕНИЯ</a>
@@ -72,9 +72,10 @@
     </div>
   </header>
   <main class="page-main">
-    <h1 class="visually-hidden">Информация о направлениях пользователя</h1>
-    <form action="https://echo.htmlacademy.ru" method="POST" class="user-info">
-      <div class="container">
+    <div class="container">
+      <h1 class="visually-hidden">Информация о направлениях пользователя</h1>
+      <form action="https://echo.htmlacademy.ru" method="POST" class="user-info">
+
         <section class="general-info">
           <h2 class="visually-hidden">Предпочтения</h2>
           <div class="general-info__level ">
@@ -295,8 +296,8 @@
             </li>
           </ol>
         </section>
-      </div>
-    </form>
+      </form>
+    </div>
   </main>
   <footer class="page-footer">
     <div class="container">
