--- a/source/pages/companions.html
+++ b/source/pages/companions.html
@@ -73,7 +73,185 @@
   <main class="page-main">
     <div class="container">
       <h1 class="visually-hidden">Подбор попутчиков</h1>
-
+      <div class="filter">
+        <img src="../img/filter.svg" alt="Фильтрация по странам" class="filter__filter-icon" />
+        <span class="filter__filter-text">ФИЛЬТРАЦИЯ ПО СТРАНАМ</span>
+        <button class="filter__toggle button button--points-togle" type="button">
+          <span class="visually-hidden">Открыть фильтр</span>
+        </button>
+        <ul class="filter__list continent-list">
+          <li class="continent-list__item continent-list__item--active">
+            Европа
+          </li>
+          <li class="continent-list__item">
+            Азия
+          </li>
+          <li class="continent-list__item">
+            Америка
+          </li>
+          <li class="continent-list__item">
+            Острова
+          </li>
+        </ul>
+        <ul class="filter__list buttons-block">
+          <li class="buttons-block__item">
+            <ul class="buttons-block__list buttons-line">
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">А</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Б</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">В</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Г</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Д</span>
+                </button>
+              </li>
+            </ul>
+          </li>
+          <li class="buttons-block__item">
+            <ul class="buttons-block__list buttons-line">
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Е</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">З</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">И</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">К</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Л</span>
+                </button>
+              </li>
+            </ul>
+          </li>
+          <li class="buttons-block__item">
+            <ul class="buttons-block__list buttons-line">
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">М</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Н</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">О</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">П</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Р</span>
+                </button>
+              </li>
+            </ul>
+          </li>
+          <li class="buttons-block__item">
+            <ul class="buttons-block__list buttons-line">
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">С</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Т</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">У</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Ф</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Х</span>
+                </button>
+              </li>
+            </ul>
+          </li>
+          <li class="buttons-block__item">
+            <ul class="buttons-block__list buttons-line">
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Ч</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Ш</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Э</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Ю</span>
+                </button>
+              </li>
+              <li class="buttons-line__item">
+                <button class="buttons-line__button">
+                  <span class="buttons-line__button-text">Я</span>
+                </button>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <!-- <ul class="main-nav__list site-list">
+          <li class="site-list__item">
+            <a class="site-list__link" href="../pages/about.html">О СЕРВИСЕ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="../pages/directions.html">НАПРАВЛЕНИЯ</a>
+          </li>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">Попутчики</a>
+          </li>
+        </ul> -->
+      </div>
     </div>
   </main>
   <footer class="page-footer">
