--- a/source/pages/directions.html
+++ b/source/pages/directions.html
@@ -205,9 +205,9 @@
               <p class="step-list__description">
                 Укажите страны, которые вы хотели бы посетить. Это может быть одна или сразу несколько.
               </p>
-              <ul class="step-list__sub-list country-input-list">
-                <li class="country-input-list__item">
-                  <select class="country-input-list select">
+              <ul class="step-list__sub-list select-input-list">
+                <li class="select-input-list__item">
+                  <select class="select-input-list select">
                     <option class="select__item">ВЫБЕРИТЕ СТРАНУ</option>
                     <option class="select__item">Австралия</option>
                     <option class="select__item">Австрия</option>
@@ -221,12 +221,12 @@
                     <option class="select__item">Армения</option>
                     <option class="select__item" selected>Босния и Герцеговина</option>
                   </select>
-                  <p class="country-input-list__dot-image country-input-list__dot-image--active">.</p>
-                  <img src="../img/bosniaherzegovinaflag.svg" class="country-input-list__flag" alt="Флаг страны" />
-                  <sup class="country-input-list__remove-country">x</sup>
+                  <p class="select-input-list__dot-image select-input-list__dot-image--active">.</p>
+                  <img src="../img/bosniaherzegovinaflag.svg" class="select-input-list__flag" alt="Флаг страны" />
+                  <sup class="select-input-list__remove-country">x</sup>
                 </li>
-                <li class="country-input-list__item">
-                  <select class="country-input-list select">
+                <li class="select-input-list__item">
+                  <select class="select-input-list select">
                     <option class="select__item">ВЫБЕРИТЕ СТРАНУ</option>
                     <option class="select__item">Австралия</option>
                     <option class="select__item">Австрия</option>
@@ -242,11 +242,11 @@
                     <option class="select__item">Босния и Герцеговина</option>
                     <option class="select__item" selected>Чехия</option>
                   </select>
-                  <p class="country-input-list__dot-image country-input-list__dot-image--active">.</p>
-                  <img src="../img/czechflag.svg" class="country-input-list__flag" alt="Флаг страны" />
+                  <p class="select-input-list__dot-image select-input-list__dot-image--active">.</p>
+                  <img src="../img/czechflag.svg" class="select-input-list__flag" alt="Флаг страны" />
                 </li>
-                <li class="country-input-list__item">
-                  <select class="country-input-list select">
+                <li class="select-input-list__item">
+                  <select class="select-input-list select">
                     <option class="select__item" selected>ВЫБЕРИТЕ СТРАНУ</option>
                     <option class="select__item">Австралия</option>
                     <option class="select__item">Австрия</option>
@@ -262,8 +262,8 @@
                     <option class="select__item">Босния и Герцеговина</option>
                     <option class="select__item">Чехия</option>
                   </select>
-                  <p class="country-input-list__dot-image country-input-list__dot-image--active">.</p>
-                  <img src="../img/plus.svg" class="country-input-list__flag" alt="Добавить новую страну" />
+                  <p class="select-input-list__dot-image select-input-list__dot-image--active">.</p>
+                  <img src="../img/plus.svg" class="select-input-list__flag" alt="Добавить новую страну" />
                 </li>
               </ul>
               <button type="button" class="add-plans__next-step button button--middle-theme">Следующий шаг</button>
@@ -279,14 +279,14 @@
                   <h4 class="country-description-list__caption">
                     Босния и Герцеговина
                   </h4>
-                  <img src="../img/bosniaherzegovinaflag.svg" class="country-input-list__flag" alt="Флаг страны" />
+                  <img src="../img/bosniaherzegovinaflag.svg" class="select-input-list__flag" alt="Флаг страны" />
                   <textarea class="country-description-list__change-text" placeholder="План действий"></textarea>
                 </li>
                 <li class="country-description-list__item">
                   <h4 class="country-description-list__caption">
                     Чехия
                   </h4>
-                  <img src="../img/czechflag.svg" class="country-input-list__flag" alt="Флаг страны" />
+                  <img src="../img/czechflag.svg" class="select-input-list__flag" alt="Флаг страны" />
                   <textarea class="country-description-list__change-text"
                     placeholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
                 </li>
