--- a/source/pages/companions.html
+++ b/source/pages/companions.html
@@ -332,7 +332,27 @@
   </main>
   <footer class="page-footer">
     <div class="container">
-
+      <h2 class="page-footer__caption">Погнали?</h2>
+      <ul class="page-footer__list social-list">
+        <li class="social-list__item">
+          <a class="social-list__link icon icon--light-theme icon--facebook"
+            href="https://www.facebook.com/htmlacademy">Мы в
+            Фейсбуке</a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link icon icon--light-theme icon--vkontakte" href="https://vk.com/htmlacademy">Мы в
+            Вконтакте</a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link icon icon--light-theme icon--instagram"
+            href="https://www.instagram.com/htmlacademy">Мы в
+            Инстаграме</a>
+        </li>
+      </ul>
+      <div class="page-footer__developed">
+        <span class="page-footer__developed-caption">Разработано</span>
+        <img src="img/footerlogo.svg" alt="Логотип" />
+      </div>
     </div>
   </footer>
 </body>
