added some images. added companions section

--- a/source/index.html
+++ b/source/index.html
@@ -212,7 +212,7 @@
         <ul class="users__cards card-list">
           <li class="card-list__item">
             <div class="card-list__card">
-              <img class="card-list__photo" src="img/phototany.svg" alt="Фото Тани Фирсовой" />
+              <img class="card-list__photo" src="img/tanyphoto.svg" alt="Фото Тани Фирсовой" />
               <div class="users__level ">
                 <b class="users__level-number">99</b>
                 level
