--- a/source/pages/companions.html
+++ b/source/pages/companions.html
@@ -11,7 +11,7 @@
     <div class="container">
       <span class="page-header__text-logo">Погнали?</span>
       <a class="page-header__logo visually-hidden">
-        <img src="img/logo.svg" width="226" height="30" alt="Логотип" />
+        <img src="../img/logo.svg" width="226" height="30" alt="Логотип" />
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle button button--togle" type="button">
@@ -328,6 +328,302 @@
         </ul>
         <button type="button" class="choose-companion__show button button--light-theme">Показать</button>
       </form>
+      <section class="companions">
+        <h2 class="visually-hidden">Попутчики</h2>
+        <ul class="companions__cards card-list">
+          <li class="card-list__item">
+            <div class="card-list__card">
+              <img class="card-list__photo" src="../img/tanyavatar.svg" alt="Фото Тани Фирсовой" />
+              <button class="card-list__button button button--like button--active"></button>
+              <span class="card-list__user-name">Таня <br>Фирсова</span>
+              <span class="card-list__liks-count">1.5 М</span>
+              <span class="card-list__is-online card-list__is-online--offline">.</span>
+              <div class="card-list__info">
+                <ul class="card-list hashtag-list">
+                  <li class="hashtag-list__item">
+                    #ЗОЖ
+                  </li>
+                  <li class="hashtag-list__item">
+                    #ПП
+                  </li>
+                  <li class="hashtag-list__item">
+                    #Фитнес
+                  </li>
+                  <li class="hashtag-list__item">
+                    #пляж
+                  </li>
+                  <li class="hashtag-list__item">
+                    #авокадо
+                  </li>
+                  <li class="hashtag-list__item">
+                    #смузи
+                  </li>
+                </ul>
+                <span class="card-list__want-visit">хочет посетить:</span>
+                <ul class="flags--list">
+                  <li class="flags--list__item">
+                    <div class="flags-list__country-info">
+                      <img class="flag" src="../img/srilankaflag.svg" alt="Флаг Шри-Ланки" />
+                      <span class="flags-list__flag-caption">ШРИ-ЛАНКА</span>
+                    </div>
+                  </li>
+                  <li class="flags--list__item">
+                    <div class="flags-list__country-info">
+                      <img class="flag" src="../img/thailandflag.svg" alt="Флаг Тайланда" />
+                      <span class="flags-list__flag-caption">ТАЙЛАНД</span>
+                    </div>
+                  </li>
+                  <li class="flags--list__item">
+                    <div class="flags-list__country-info">
+                      <img class="flag" src="../img/seychellesflag.svg" alt="Флаг Сейшилы" />
+                      <span class="flags-list__flag-caption">СЕЙШИЛЫ</span>
+                    </div>
+                  </li>
+                </ul>
+                <div class="card-list__transports">
+                  <span class="card-list__trasport-caption">
+                    Транспорт
+                  </span>
+                  <ul class="card-list icon-list">
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--airplane icon--active">Самолет</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--bus">Автобус</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--bicycle">Велосипед</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--pedestrian">Пешеходные прогулки</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="companions__level ">
+                  level
+                  <b class="companions__level-number">99</b>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="companions__call button button--middle-theme">ПОЗВАТЬ!</button>
+          </li>
+          <li class="card-list__item">
+            <div class="card-list__card">
+              <img class="card-list__photo" src="../img/deminavatar.svg" alt="Фото Пети Демина" />
+              <button class="card-list__button button button--like"></button>
+              <span class="card-list__user-name">Петя <br>Демин</span>
+              <span class="card-list__liks-count">1500</span>
+              <span class="card-list__is-online card-list__is-online--offline">.</span>
+              <div class="card-list__info">
+                <ul class="card-list hashtag-list">
+                  <li class="hashtag-list__item">
+                    #бургер
+                  </li>
+                  <li class="hashtag-list__item">
+                    #бар
+                  </li>
+                  <li class="hashtag-list__item">
+                    #футбол
+                  </li>
+                  <li class="hashtag-list__item">
+                    #концерт
+                  </li>
+                  <li class="hashtag-list__item">
+                    #крафт
+                  </li>
+                </ul>
+                <span class="card-list__want-visit">хочет посетить:</span>
+                <ul class="flags--list">
+                  <li class="flags--list__item">
+                    <div class="flags-list__country-info">
+                      <img class="flag" src="../img/belgiumflag.svg" alt="Флаг Бельгии" />
+                      <span class="flags-list__flag-caption">БЕЛЬГИЯ</span>
+                    </div>
+                  </li>
+                  <li class="flags--list__item">
+                    <div class="flags-list__country-info">
+                      <img class="flag" src="../img/czechflag.svg" alt="Флаг Чехии" />
+                      <span class="flags-list__flag-caption">ЧЕХИЯ</span>
+                    </div>
+                  </li>
+                </ul>
+                <div class="card-list__transports">
+                  <span class="card-list__trasport-caption">
+                    Транспорт
+                  </span>
+                  <ul class="card-list icon-list">
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--airplane icon--active">Самолет</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--bus icon--active">Автобус</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--bicycle">Велосипед</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--pedestrian icon--active">Пешеходные
+                        прогулки</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="companions__level ">
+                  level
+                  <b class="companions__level-number">80</b>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="companions__call button button--middle-theme">ПОЗВАТЬ!</button>
+          </li>
+          <li class="card-list__item">
+            <div class="card-list__card">
+              <img class="card-list__photo" src="../img/smolovavatar.svg" alt="Фото Марк Смолов" />
+              <button class="card-list__button button button--like"></button>
+              <span class="card-list__user-name">Марк <br>Смолов</span>
+              <span class="card-list__liks-count">170</span>
+              <span class="card-list__is-online card-list__is-online--offline">.</span>
+              <div class="card-list__info">
+                <ul class="card-list hashtag-list">
+                  <li class="hashtag-list__item">
+                    #рэп
+                  </li>
+                  <li class="hashtag-list__item">
+                    #тату
+                  </li>
+                  <li class="hashtag-list__item">
+                    #хайлбист
+                  </li>
+                  <li class="hashtag-list__item">
+                    #кроссовки
+                  </li>
+                  <li class="hashtag-list__item">
+                    #суприм
+                  </li>
+                </ul>
+                <span class="card-list__want-visit">хочет посетить:</span>
+                <div class="card-list__flags">
+                  <ul class="flags--list">
+                    <li class="flags--list__item">
+                      <div class="flags-list__country-info">
+                        <img class="flag" src="../img/usaflag.svg" alt="Флаг США" />
+                        <span class="flags-list__flag-caption">США</span>
+                      </div>
+                    </li>
+                    <li class="flags--list__item">
+                      <div class="flags-list__country-info">
+                        <img class="flag" src="../img/australiaflag.svg" alt="Флаг Австралии" />
+                        <span class="flags-list__flag-caption">АВСТРАЛИЯ</span>
+                      </div>
+                    </li>
+                    <li class="flags--list__item">
+                      <div class="flags-list__country-info">
+                        <img class="flag" src="../img/dominicanaflag.svg" alt="Флаг Доминиканы" />
+                        <span class="flags-list__flag-caption">ДОМИНИКАНА</span>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="card-list__transports">
+                  <span class="card-list__trasport-caption">
+                    Транспорт
+                  </span>
+                  <ul class="card-list icon-list">
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--airplane icon--active">Самолет</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--bus">Автобус</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--bicycle icon--active">Велосипед</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--pedestrian">Пешеходные
+                        прогулки</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="companions__level ">
+                  level
+                  <b class="companions__level-number">25</b>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="companions__call button button--middle-theme">ПОЗВАТЬ!</button>
+          </li>
+          <li class="card-list__item">
+            <div class="card-list__card">
+              <img class="card-list__photo" src="../img/rogovaavatar.svg" alt="Фото Лариса Роговая" />
+              <button class="card-list__button button button--like"></button>
+              <span class="card-list__user-name">Лариса <br>Роговая</span>
+              <span class="card-list__liks-count">170</span>
+              <span class="card-list__is-online card-list__is-online--online">.</span>
+              <div class="card-list__info">
+                <ul class="card-list hashtag-list">
+                  <li class="hashtag-list__item">
+                    #образование
+                  </li>
+                  <li class="hashtag-list__item">
+                    #карьера
+                  </li>
+                  <li class="hashtag-list__item">
+                    #учеба
+                  </li>
+                  <li class="hashtag-list__item">
+                    #линкедин
+                  </li>
+                </ul>
+                <span class="card-list__want-visit">хочет посетить:</span>
+                <div class="card-list__flags">
+                  <ul class="flags--list">
+                    <li class="flags--list__item">
+                      <div class="flags-list__country-info">
+                        <img class="flag" src="../img/ukflag.svg" alt="Флаг Великобритании" />
+                        <span class="flags-list__flag-caption">ВЕЛИКОБРИТАНИЯ</span>
+                      </div>
+                    </li>
+                    <li class="flags--list__item">
+                      <div class="flags-list__country-info">
+                        <img class="flag" src="../img/germanflag.svg" alt="Флаг Германии" />
+                        <span class="flags-list__flag-caption">ГЕРМАНИЯ</span>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="card-list__transports">
+                  <span class="card-list__trasport-caption">
+                    Транспорт
+                  </span>
+                  <ul class="card-list icon-list">
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--airplane icon--active">Самолет</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--bus icon--active">Автобус</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--bicycle">Велосипед</a>
+                    </li>
+                    <li class="icon-list__item">
+                      <a class="icon-list__link icon icon--transparent-theme icon--pedestrian">Пешеходные
+                        прогулки</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="companions__level ">
+                  level
+                  <b class="companions__level-number">50</b>
+                </div>
+              </div>
+            </div>
+            <button type="button" class="companions__call button button--middle-theme">ПОЗВАТЬ!</button>
+          </li>
+        </ul>
+        <button type="button" class="companions__show-more button button--plus button--transparent-theme">ПОКАЗАТЬ
+          ЕЩЕ</button>
+      </section>
+      <button class="companions__prev-page" type="button">Предыдущая страница</button>
+      <button class="companions__next-page" type="button">Следующая страница</button>
     </div>
   </main>
   <footer class="page-footer">
@@ -351,7 +647,7 @@
       </ul>
       <div class="page-footer__developed">
         <span class="page-footer__developed-caption">Разработано</span>
-        <img src="img/footerlogo.svg" alt="Логотип" />
+        <img src="../img/footerlogo.svg" alt="Логотип" />
       </div>
     </div>
   </footer>
