--- a/source/pages/directions.html
+++ b/source/pages/directions.html
@@ -82,7 +82,7 @@
             <b class="general-info__level-number">80</b>
             level
           </div>
-          <img class="general-info__avatar" src="../img/deminphoto.svg" alt="Фотография Демина" />
+          <img class="general-info__avatar" src="../img/deminavatar.svg" alt="Фотография Демина" />
           <button class="general-info__change-photo button button--light-theme">СМЕНИТЬ ФОТО</button>
           <fieldset class="dataset">
             <legend class="dataset__legend">ТЭГИ</legend>
