--- a/source/companions.html
+++ b/source/companions.html
@@ -20,10 +20,10 @@
 
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="../pages/about.html">О СЕРВИСЕ</a>
+            <a class="site-list__link" href="about.html">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="../pages/directions.html">НАПРАВЛЕНИЯ</a>
+            <a class="site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="#">Попутчики</a>
