--- a/source/index.html
+++ b/source/index.html
@@ -20,13 +20,13 @@
 
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="./pages/about.html">О СЕРВИСЕ</a>
+            <a class="site-list__link" href="about.html">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="./pages/directions.html">НАПРАВЛЕНИЯ</a>
+            <a class="site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="./pages/companions.html">Попутчики</a>
+            <a class="site-list__link" href="companions.html">Попутчики</a>
           </li>
         </ul>
       </nav>
